Archive2/0c/0f59a78369a63f/output
main.cpp: In function 'int main()':
main.cpp:21:5: error: 'da' was not declared in this scope
     da
     ^
